--- a/src/main/resources/docker-compose.yml
+++ b/src/main/resources/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   postgres:
-    container_name: sec_db
+    container_name: school_schdl_db
     image: postgres:latest
     environment:
       POSTGRES_PASSWORD: postgres
